# ai-challenge-generator

backend/: pyproject.toml
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/auth/: AuthenticationPage.tsx  ClerkProviderWithRoutes.tsx
frontend/src/challenge/: ChallengeGenerator.tsx  MCQCahllenge.tsx
frontend/src/history/: HistoryPanel.tsx
frontend/src/layout/: Layout.tsx
